# ukl

./: .b  .b1  .break-lookup  .config  .gitignore  .gitmodules  .hello  .kernel  .linux  .pll  .pt_regs  .rtld  .rtld-file  CONTRIBUTORS  LOG  Makefile  Makefile.am  OS_Eval.c  README  README.md  UKL_link_outputs  build_ukl.sh  cleanbuild.sh  client.c  configure.ac  display-entry  display-entry.c  dummy-entry.c  entry-patch.c  error_barf  extractglibc.sh  fio.patch  helloworld.c  init  interface.c  kmain.c  ld-linux-x86-64.so.2  ld-uklsyms.sh  ldopts.txt  libc.so.in  (+45 more)
.github/workflows/: docker.yaml  test.yaml  test_boot.yml
client/: Makefile  client  client.c  server  server.c
data/: ld-linux-x86-64.so.2
dnsmasq/: Makefile.am  dnsmasq.conf
elf-hacks/: .ld-gdb-hack.c.swp  dl-gdb-hack  dl-patch-prot  dl-patch-prot.c  elf-sections  elf-sections.c  ld-linux-x86-64.so.2  xelf-edit.c
elf-hacks/xelf-edit/: xelf-edit.c  xelf-edit.h
event-tester/: Makefile.am  echo_defs.h  epoll.c  event-tester.c  iouring.c  tcp_client.c  tcp_echo.c  tcp_echo.h  threads.c  tsc_logger.h  upcall.c
experiments/: redis-baseline.sh
fio/: Makefile.am  benchmark.fio  math_hack.c
gdb/: find-syscall  linux  python  redis  reset  rtld
glibc/: entry-patch.c  ld-linux-x86-64.so.2  uklsyms-static.c
glibc-build/: .gitignore  Versions.v  Versions.v.i  libBrokenLocale.map  libm.map  libmvec.map  shlib-versions.v.i
glibc-build/crypt/: crypt-entry.o.dt  crypt.o.dt  crypt_util.o.dt  md5-crypt.o.dt  md5.o.dt  sha256-crypt.o.dt  sha256.o.dt  sha512-crypt.o.dt  sha512.o.dt
glibc-build/sunrpc/: auth_des.os  auth_des.os.dt  auth_none.os  auth_none.os.dt  auth_unix.os  auth_unix.os.dt  authdes_prot.os  authdes_prot.os.dt  authuxprot.os  authuxprot.os.dt  bindrsvprt.os  bindrsvprt.os.dt  clnt_gen.os  clnt_gen.os.dt  clnt_perr.os  clnt_perr.os.dt  clnt_raw.os  clnt_raw.os.dt  clnt_simp.os  clnt_simp.os.dt  clnt_tcp.os  clnt_tcp.os.dt  clnt_udp.os  clnt_udp.os.dt  clnt_unix.os  clnt_unix.os.dt  compat-auth_des.os  compat-auth_des.os.dt  compat-auth_unix.os  compat-auth_unix.os.dt  compat-clnt_gen.os  compat-clnt_gen.os.dt  compat-clnt_perr.os  compat-clnt_perr.os.dt  compat-clnt_tcp.os  compat-clnt_tcp.os.dt  compat-clnt_udp.os  compat-clnt_udp.os.dt  compat-get_myaddr.os  compat-get_myaddr.os.dt  (+129 more)
glibc-dirs/rtld-build/: Versions.all  Versions.def  Versions.mk  Versions.tmp  Versions.v.i  config.make  cpu-features-offsets.h.d  first-versions.h  jmp_buf-ssp.h.d  ld.map  libc-abis.h  libc.map  libc_pic.opts  libcrypt.map  libdl.map  libnsl.map  libpthread.map  libresolv.map  link-defines.h  link-defines.h.d  locale-defines.h.d  pthread-pi-defines.h  pthread-pi-defines.h.d  rtld-offsets.h  runtime-linker.h  shlib-versions.v  sigaltstack-offsets.h.d  soversions.i  soversions.mk  sysd-rules  tcb-offsets.h  tcb-offsets.h.d  testrun.sh  tlsdesc.h  tlsdesc.h.d  unwindbuf.h  unwindbuf.h.d
glibc-dirs/rtld-build/argp/: argp-eexst.os.dt  argp-fmtstream.os.dt  argp-fs-xinl.o.dt  argp-help.os  argp-help.os.dt  argp-parse.o.dt  argp-pv.os  argp-pvh.o.dt  argp-pvh.os  argp-pvh.os.dt  argp-xinl.o.dt  argp-xinl.os  argp-xinl.os.dt  stamp.os
glibc-dirs/rtld-build/assert/: __assert.os  __assert.os.dt  assert.os
glibc-dirs/rtld-build/bits/: stdio_lim.d
glibc-dirs/rtld-build/catgets/: catgets.o.dt  catgets.os.dt  (+1 more)
glibc/glibc/: .gitignore  Makeconfig  Makerules  abi-tags  configure  configure.ac
glibc/rtld-build/: abi-versions.h  config.h  config.status  cpu-features-offsets.h  debugglibc.sh  jmp_buf-ssp.h  ldbl-compat-choose.h  libanl.map  librt.map  libthread_db.map  libutil.map  locale-defines.h  pthread-errnos.h  pthread-errnos.h.d  rtld-offsets.h.d  shlib-versions.v.i  sigaltstack-offsets.h  sysd-sorted  sysd-versions  ucontext_i.h  ucontext_i.h.d
hello/: Makefile  Makefile.am  UKL  hello-world  hello-world.c
initrd/: Dockerfile  Makefile.am  buildinitrd.sh  create-initrd.sh  init.in  install-data.sh  set-passwd.sh
initrd/exp/: disable_ht.sh
initrd/perf/: turbo-boost.sh
initrd/ukl-base/: Dockerfile
kallsyms-dynamic/: kallsyms-dynamic.c
kernel/: link-vmlinux.sh  ukl.h  vmlinux.lds.S  vmlinux.lds.h
libgcc-build/: .gitignore
libupcall/: Makefile.am  upcall.c  upcall.h
linux-headers/drm/: i915_drm.h
linux-headers/linux/: cxl_mem.h  ethtool_netlink.h  ipv6.h  sed-opal.h  ublk_cmd.h  uuid.h  version.h
memcached/: Makefile  Makefile.am
mpc-bench/: Makefile.am  mpc-bench.c
nginx/: Makefile.am  nginx.patch
python/: enable-bypass  enable-bypass.c  entry.sh  get-libz.sh
python/dummy/: uklsyms.c
redis/: Makefile  Makefile.am  myredis.conf  trigger.sh
rust/: Makefile.am  README.md  coredump  main.c  make_errorsverbose1.txt  tmp  undefined_sys_hack.c
rust/hello-rust/: Cargo.toml  foo.c  hello  hello.h  link.sh  main.c
rust/hello-rust/src/: hello  hellolib
secrecy/: Makefile.am
tests/: Makefile  file_io.c  linux_config  logsReader.py  run_boot.sh  run_lebench_latency.sh  run_lebench_syscalls.sh  run_lmbench_latency.sh  run_lmbench_syscalls.sh  run_memcached_server.sh  run_mybench_small.sh  run_pthread.sh
tests/boot/: boot_test.c
tests/lebench/: lebench_latency_test.c  lebench_syscalls_test.c
tests/memcached/: Makefile.in  memflush.cc  run_memaslap_tests.sh  run_telnet_tests.sh  telnet_commands.sh
tests/pthreads/: pthread_test.c
ukl-getsyms/: .Module.symvers.cmd  .modules.order.cmd  .ukl-getsyms.ko.cmd  .ukl-getsyms.mod.cmd  .ukl-getsyms.mod.o.cmd  .ukl-getsyms.o.cmd  Makefile  README.md  getsyms-Wl-opts.py  initlib  modules.order  test.sh  ukl-getsyms.c  ukl-getsyms.h  ukl-getsyms.ko  ukl-getsyms.mod  ukl-initlib  ukl-initlib.c  ukl-makeso.sh  ukl-syms.txt  uklsyms.c
v8/: .gclient_entries  Makefile copy.am  Makefile.am  find_cflags  gn_trace  jonodiary.md  make_output  v8_base_without_compiler.ninja
v8/support/: BUILD.gn  gcc_link_wrapper.py  run.py  theotherMakefile
v8/support copy/: v8.gni  v8_base_without_compiler.ninja  zlib_slide_hash_simd.ninja
v8/support/compiler/: BUILD.gn
v8/support/gcc/: BUILD.gn
valkey/: Makefile.am  README.md  trigger.sh  valkey.conf
(+6377 files in other folders)
